# OpenSteva

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REVIEW.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml  pearl_model_validation.yml
.github/workflows/: build-macos.yml  ci.yml  claude-issues.yml  docs.yml  installer-integration.yml  pypi-publish.yml  release-desktop.yml
configs/opensteva/: config.toml
deploy/posthog/: posthog-hetzner-prep.sh
deploy/windows/: README.md
docs/: desktop-auto-update.md  downloads.md  gen_install_script.py  index.md  leaderboard.md  telemetry.md
docs/architecture/: agents.md  channels.md  design-principles.md  engine.md  intelligence.md  learning.md  memory.md  overview.md  query-flow.md  security.md  skills.md
docs/deployment/: api-server.md  docker.md  index.md  launchd.md  systemd.md
docs/design/: 2026-05-05-apple-silicon-pearl-mining-design.md  2026-05-05-apple-silicon-pearl-mining-plan-v1.md  2026-05-05-pearl-coordination-discussion-draft.md  2026-05-05-vllm-pearl-mining-integration-design.md  2026-05-05-vllm-pearl-mining-integration-plan.md
docs/development/: contributing.md  mining-nvidia-validation.md  mining.md  pearl-model-enablement.md  release-checklist.md  roadmap.md
docs/getting-started/: configuration.md  install.md  installation.md  linux.md  macos.md  quickstart.md  snippets.md  windows-native.md  wsl2.md
docs/learning/: ace.md
docs/overrides/: main.html
docs/showcase/: CONTRIBUTING.md  cost-savings.md  index.md
docs/testing/: agent-qa-runbook.md
docs/tutorials/: code-companion.md  deep-research.md  index.md  messaging-hub.md  scheduled-ops.md  skills-workflow.md
docs/user-guide/: agents.md  benchmarks.md  channels-and-connectors.md  channels.md  chat-simple.md  cli.md  code-assistant.md  deep-research.md  evaluations.md  llm-guided-spec-search.md  mcp-external-servers.md  memory.md  mining-apple-silicon.md  mining.md  morning-digest.md  pearl.md  python-sdk.md  scheduled-monitor.md  scheduler.md  security.md  skills.md  telemetry.md  tools.md
examples/browser_assistant/: README.md  browser_assistant.py
examples/code_companion/: README.md  debugger.py  reviewer.py  test_gen.py
examples/daily_digest/: README.md  daily_digest.py
examples/deep_research/: README.md  research.py
examples/doc_qa/: README.md  doc_qa.py
examples/messaging_hub/: README.md  smart_inbox.py
examples/multi_model_router/: README.md  multi_model_router.py
examples/opensteva/: spec_search_quickstart.py
examples/scheduled_ops/: README.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
rust/: Cargo.toml  rust-toolchain.toml
rust/crates/opensteva-agents/: Cargo.toml
rust/crates/opensteva-agents/src/: helpers.rs  monitor_operative.rs  native_openhands.rs  native_react.rs  orchestrator.rs  simple.rs  traits.rs  utils.rs
rust/crates/opensteva-learning/: Cargo.toml
rust/crates/opensteva-learning/src/: agent_evolver.rs  bandit.rs  grpo.rs  heuristic.rs  learning_orchestrator.rs  orchestrator_types.rs  reward.rs  router_enum.rs  training_data.rs  traits.rs
rust/crates/opensteva-learning/src/optimize/: engine.rs  llm_optimizer.rs  mod.rs  search_space.rs  store.rs  types.rs
rust/crates/opensteva-mcp/: Cargo.toml
rust/crates/opensteva-mcp/src/: server.rs
rust/crates/opensteva-python/: Cargo.toml  pyproject.toml
rust/crates/opensteva-python/src/: a2a.rs  agents.rs  core.rs  engine.rs  learning.rs  lib.rs  mcp.rs  recipes.rs  scheduler.rs  security.rs  sessions.rs  skills.rs  storage.rs  telemetry.rs  templates.rs  tools.rs  traces.rs  workflow.rs
rust/crates/opensteva-telemetry/: Cargo.toml
rust/crates/opensteva-telemetry/src/: aggregator.rs  instrumented.rs  store.rs
rust/crates/opensteva-tools/: Cargo.toml
rust/crates/opensteva-tools/src/: executor.rs  traits.rs
rust/crates/opensteva-tools/src/builtin/: calculator.rs  file_tools.rs  git_tools.rs  http_tools.rs  mod.rs  shell.rs  think.rs
rust/crates/opensteva-tools/src/storage/: backend_enum.rs  bm25.rs  colbert.rs  faiss.rs  hybrid.rs  knowledge_graph.rs  sqlite.rs  traits.rs
scripts/: index_docs.py  oauth_all.py  quickstart.sh  smoke_framework_comparison.sh
tests/: conftest.py  test_digest_integration.py  test_query_orchestrator.py
(+1440 files in other folders)
