[package]
name = "opensteva-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
opensteva-core = { path = "../opensteva-core" }
opensteva-tools = { path = "../opensteva-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
